[tool.poetry]
name = "ycrawler"
version = "0.1.0"
description = "OTUS Homework #11. Ycrawler"
authors = ["inna-tuzhikova <inna-tuzhikova@github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.3"
aiofiles = "23.2.1"
beautifulsoup4 = "4.12.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
ignore = ["W503", "F811", "E722"]
max-line-length = 80
